--- a/css/styles.css
+++ b/css/styles.css
@@ -36,6 +36,8 @@ main {
 
 .page-header {
 border-bottom: 1px solid #e7e9fc;
+box-shadow: 0 1px 6px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 2px 1px 0 rgba(46, 47, 66, 0.08);
+    background: #fff;
 }
 .header-container {
     display: flex;
@@ -84,6 +86,24 @@ border-bottom: 1px solid #e7e9fc;
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: #2e2f42;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.nav-link.current {
+position: relative;
+color: #404bbf;
+}
+
+.nav-link.current::after {
+content: '';
+position: absolute;
+left: 0;
+bottom: -1px;
+width: 100%;
+height: 4px;
+border-radius: 2px;
+background-color: #404bbf;
+
 }
 
 .address {
@@ -104,11 +124,14 @@ border-bottom: 1px solid #e7e9fc;
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: #434455;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .address-link:hover,
 .address-link:focus,
 .nav-link:hover,
-.nav-link:focus{color: #404bbf;}
+.nav-link:focus
+.nav-link.current {color: #404bbf;
+}
 
 /* ------------------SECTION 1 PAGE HERO--------------- */
 
@@ -125,6 +148,15 @@ border-bottom: 1px solid #e7e9fc;
     justify-content: center;
     align-items: center;
 }*/
+.page-hero-tittle{
+    font-size: 56px;
+    line-height: 1.07;
+    letter-spacing: 0.02em;
+    text-align: center;
+    color: #fff;
+    max-width: 496px;
+    margin: 0 auto 48px;
+}
 
 .page-hero-button{
     display: block;
