--- a/css/styles.css
+++ b/css/styles.css
@@ -45,6 +45,13 @@ box-shadow: 0 1px 6px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.1
     align-items: center;
 }
 
+.page-hero-section {
+background-image: linear-gradient(to bottom,
+        rgba(46, 47, 66, 0.7),
+        rgba(46, 47, 66, 0.7)),
+        url(../images/people-office.jpg);
+        background-size cover;
+}
 
 .page-header-list {
     display: flex;
@@ -130,9 +137,8 @@ background-color: #404bbf;
 .address-link:hover,
 .address-link:focus,
 .nav-link:hover,
-.nav-link:focus
-.nav-link.current {color: #404bbf;
-}
+.nav-link:focus,
+.nav-link.current {color: #404bbf;}
 
 /* ------------------SECTION 1 PAGE HERO--------------- */
 
