--- a/css/styles.css
+++ b/css/styles.css
@@ -258,6 +258,8 @@ background-color: #f4f4fd;
 .ourteam {
         background-color: #F4F4FD;
         padding: 120px 0;
+
+        
 }
 
 
@@ -272,6 +274,9 @@ background-color: #f4f4fd;
 }
 .ourteam-about {
     padding: 32px 0 8px;
+    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+            0px 1px 1px rgba(46, 47, 66, 0.16),
+            0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 .ourteam-list {
     display: flex;
