--- a/css/styles.css
+++ b/css/styles.css
@@ -313,6 +313,7 @@ background-color: #f4f4fd;
     gap: 24px;
     max-width: 264px;
 height: 40px;
+background-color: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .soc-link {
     width: 40px;
