--- a/css/styles.css
+++ b/css/styles.css
@@ -360,9 +360,14 @@ height: 40px;
     flex-wrap: wrap;
     row-gap:  48px;
     column-gap: 24px;
+    box-shadow: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
 }
 .portfolio-item{
     width:calc((100% - 48px) / 3);
+    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+        0px 1px 1px rgba(46, 47, 66, 0.16),
+        0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 
 
