--- a/css/styles.css
+++ b/css/styles.css
@@ -353,6 +353,7 @@ height: 40px;
     border-right: 1px solid #e7e9fc;
     padding: 32px 16px;
 
+
 }
 .portfolio-list {
     display: flex;
@@ -360,7 +361,7 @@ height: 40px;
     flex-wrap: wrap;
     row-gap:  48px;
     column-gap: 24px;
-    box-shadow: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
 }
 .portfolio-item{
@@ -368,6 +369,8 @@ height: 40px;
     box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
         0px 1px 1px rgba(46, 47, 66, 0.16),
         0px 2px 1px rgba(46, 47, 66, 0.08);
+
+
 
 
 }
