--- a/css/styles.css
+++ b/css/styles.css
@@ -432,10 +432,10 @@ height: 40px;
     justify-content: center;
     margin-right: 120px;
 }
-/*.logo-footer {
+.logo-footer {
     display: inline-block;
     margin-bottom: 16px;
-}*/
+}
 
 .footer-text {
 
