--- a/css/styles.css
+++ b/css/styles.css
@@ -303,6 +303,7 @@ background-color: #f4f4fd;
     letter-spacing: 0.02em;
     text-align: center;
     color: #434455;
+    margin-bottom: 8px;
 }
 
 .soc-list {
@@ -364,19 +365,18 @@ height: 40px;
 
 
 }
-.portfolio-item{
+.portfolio-item {
     width:calc((100% - 48px) / 3);
-    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
-        0px 1px 1px rgba(46, 47, 66, 0.16),
-        0px 2px 1px rgba(46, 47, 66, 0.08);
-        transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
-
-
+        transition: box-shadow, 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
 }
 .portfolio-item:hover .portfolio-cover-text {
     transform: translateY(0);
+}
+.portfolio-item:hover {
+    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+        0px 1px 1px rgba(46, 47, 66, 0.16),
+        0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 
 
